[gd_scene load_steps=2 format=3 uid="uid://cp4mjkqx8gq2f"]

[ext_resource type="Script" path="res://scripts/ui/loading_screen.gd" id="1_loading"]

[node name="LoadingScreen" type="CanvasLayer"]
layer = 100
script = ExtResource("1_loading")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.08, 1)

[node name="SpinnerContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -150.0
offset_right = 50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spinner" type="ColorRect" parent="SpinnerContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)
color = Color(0.3, 0.6, 1, 0)

[node name="Outer" type="ColorRect" parent="SpinnerContainer/Spinner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.5, 0.9, 0.3)

[node name="Inner" type="ColorRect" parent="SpinnerContainer/Spinner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.08, 1)

[node name="Accent1" type="ColorRect" parent="SpinnerContainer/Spinner"]
layout_mode = 0
offset_left = 60.0
offset_top = 35.0
offset_right = 70.0
offset_bottom = 45.0
color = Color(0.4, 0.7, 1, 0.8)

[node name="Accent2" type="ColorRect" parent="SpinnerContainer/Spinner"]
layout_mode = 0
offset_left = 10.0
offset_top = 35.0
offset_right = 20.0
offset_bottom = 45.0
color = Color(0.3, 0.5, 0.8, 0.5)

[node name="LoadingLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "LOADING..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = 50.0
offset_right = 250.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="ProgressContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
max_value = 100.0
show_percentage = false

[node name="TipLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "Search containers thoroughly - rare items hide in unexpected places"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
